# sh

./: .cvsignore  AUTHORS  BUGS  CODING_STANDARDS  COPYING  COPYING.HEADER  ChangeLog  INSTALL  Jamfile  Makefile.am  Makefile.win32  NEWS  README  README.osx  README.w32.txt  RELEASING  TODO  acinclude.m4  add_libsh_copyright_notice.pl  bootstrap  config.h.in  configure.ac  fix_dll_export.pl  fix_guards.pl  project-root.jam  remove_sh_prefix.pl  win32.mk
backends/arb/: Makefile.am  ShArb.cpp  ShArb.hpp  ShArbExtensions.cpp  ShArbMemory.cpp  ShArbMemory.hpp  ShArbReg.cpp  ShArbStream.cpp  ShArbTexture.cpp
backends/cc/: Cc.cpp  Cc.hpp  CcEmit.cpp  CcTextures.hpp  CcTexturesString.hpp  Jamfile  Makefile.am  Makefile.in  Makefile.win32
backends/gl/: Arb.cpp  Arb.hpp  ArbBackend.cpp  ArbCode.cpp  ArbCode.hpp  ArbEmit.cpp  ArbInst.cpp  ArbInst.hpp  ArbLimits.cpp  ArbLimits.hpp  ArbReg.cpp  ArbReg.hpp  FBOCache.cpp  FBOCache.hpp  FBOStreams.cpp  FBOStreams.hpp  GLXPBufferContext.cpp  GLXPBufferContext.hpp  GLXPBufferStreams.cpp  GLXPBufferStreams.hpp  GlBackend.cpp  GlBackend.hpp  GlTextureName.cpp  GlTextureName.hpp  GlTextureStorage.cpp  GlTextureStorage.hpp  GlTextures.cpp  GlTextures.hpp  Glsl.cpp  Glsl.hpp  GlslBackend.cpp  GlslCode.cpp  GlslCode.hpp  GlslEmit.cpp  GlslSet.cpp  GlslSet.hpp  GlslVariable.cpp  GlslVariable.hpp  GlslVariableMap.cpp  GlslVariableMap.hpp  (+22 more)
backends/rds/: CallBack.cpp  CallBack.hpp  DAG.cpp  DAG.hpp  FullSearch.cpp  FullSearch.hpp  Limits.cpp  Limits.hpp  Makefile.am  Makefile.win32  NextKSubset.cpp  NextKSubset.hpp  PDomTree.cpp  PDomTree.hpp  Partition.cpp  Partition.hpp  Pass.cpp  Pass.hpp  RDS.cpp  RDS.hpp  RDSBackend.cpp  RDSBackend.hpp  RDSDriver.cpp  testprog.cpp
doc/: .cvsignore  DESIGN  Doxyfile  Doxyfile.real  Makefile.am
examples/particle/: Camera.cpp  Camera.hpp  Makefile  Makefile.am  Makefile.in  Makefile.win32  README  main.cpp
examples/textures/: Camera.cpp  Camera.hpp  Makefile  Makefile.am  Makefile.in  Makefile.win32  ShTrackball.cpp  ShTrackball.hpp  Trackball.cpp  main.cpp
lua/LuaSh/: LuaSh.sln  Makefile.am  configure.ac
progwrap/: BUGS  ChangeLog  Makefile.am  configure.ac
progwrap/config/: sm.m4
progwrap/src/: Makefile.am  ShAlgebra.cpp  ShArray.hpp  ShBackend.hpp  ShBitSet.hpp  ShBlock.hpp  ShChannelNode.hpp  ShColor.hpp  ShCtrlGraph.cpp  ShCtrlGraph.hpp  ShDomTree.hpp  ShEnvironment.cpp  ShEnvironment.hpp  ShException.hpp  ShGeneric.hpp  ShImage3D.cpp  ShImage3D.hpp  ShInstructions.cpp  ShLibArith.hpp  ShLibClamp.hpp  ShLibGeometry.hpp  ShLibMatrix.hpp  ShLinearAllocator.hpp  ShManipulator.cpp  ShManipulator.hpp  ShManipulatorImpl.hpp  ShMatrixImpl.hpp  ShMemory.hpp  ShMeta.hpp  ShMetaForwarder.cpp  ShMetaForwarder.hpp  ShNormal.hpp  ShNormalImpl.hpp  ShOptimizer.cpp  ShOptimizer.hpp  ShParser.hpp  ShPosition.cpp  ShPosition.hpp  ShProgram.cpp  ShStatement.cpp  (+8 more)
progwrap/test/: Makefile.am
progwrap/util/: ShFunc.hpp  ShFuncImpl.hpp  ShNoiseImpl.hpp  ShObjMesh.cpp  ShWorley.hpp  ShWorleyImpl.hpp
progwrap/win32/: sh.sln
shga/: Makefile.am  ShgaBase.hpp  ShgaBaseImpl.hpp  ShgaConstants.hpp  ShgaMultivector.hpp  ShgaMultivectorImpl.hpp  ShgaVersor.hpp  ShgaVersorImpl.hpp
shla/: Makefile.am  ShlaLib.hpp  ShlaMatrix.hpp  ShlaMatrixImpl.hpp  ShlaRenderGlobal.hpp  ShlaRenderGlobalImpl.hpp  ShlaRenderable.hpp  ShlaRenderableImpl.hpp  ShlaVector.hpp  ShlaVectorImpl.hpp  TODO  shla.hpp
src/: Jamfile  Makefile.am  Makefile.win32  ShAaHier.cpp  ShAaHier.hpp  ShAaOpHandler.cpp  ShAaOpHandler.hpp  ShAaOps.cpp  ShAaOps.hpp  ShAaScanCore.cpp  ShAaScanCore.hpp  ShAaScanErr.cpp  ShAaScanErr.hpp  ShAaSymPlacer.cpp  ShAaSymPlacer.hpp  ShAaSyms.cpp  ShAaSyms.hpp  ShAaVariable.cpp  ShAaVariable.hpp  ShAffine.hpp  ShAffineImpl.hpp  ShAffineTexture.cpp  ShAffineTexture.hpp  ShAlgebra.cpp  ShAlgebra.hpp  ShArray.hpp  ShArrayData.cpp  ShArrayData.hpp  ShAttrib.cpp  ShAttrib.hpp  ShAttribImpl.hpp  ShBackend.cpp  ShBackend.hpp  ShBaseTexture.cpp  ShBaseTexture.hpp  ShBaseTextureImpl.hpp  ShBasicBlock.cpp  ShBasicBlock.hpp  ShBitSet.cpp  ShBitSet.hpp  (+275 more)
src/scripts/: ShAttrib.cpp.py  ShAttrib.hpp.py  ShAttribImpl.hpp.py  ShColor.hpp.py  ShColorImpl.hpp.py  ShNormal.cpp.py  ShNormal.hpp.py  ShPoint.cpp.py  ShPoint.hpp.py  ShPointImpl.hpp.py  ShPosition.cpp.py  ShPosition.hpp.py  ShTexCoord.cpp.py  ShTexCoord.hpp.py  ShVector.cpp.py  ShVector.hpp.py  common.py  semantic.py
src/sh/: AaHier.cpp  AaHier.hpp  AaOpHandler.cpp  AaOpHandler.hpp  AaOps.cpp  AaOps.hpp  AaScanCore.cpp  AaScanCore.hpp  AaScanErr.cpp  AaScanErr.hpp  AaSymPlacer.cpp  AaSymPlacer.hpp  AaSyms.cpp  AaSyms.hpp  AaVariable.cpp  AaVariable.hpp  Affine.hpp  AffineImpl.hpp  AffineTexture.cpp  AffineTexture.hpp  Algebra.cpp  Algebra.hpp  Array.hpp  ArrayImpl.hpp  Attrib.hpp  AttribImpl.hpp  AutoDiff.cpp  AutoDiff.hpp  Backend.cpp  Backend.hpp  BaseTexture.cpp  BaseTexture.hpp  BaseTextureImpl.hpp  BaseTextureND.hpp  BaseTextureNDImpl.hpp  BasicBlock.cpp  BasicBlock.hpp  BitSet.cpp  (+385 more)
test/: .cvsignore  Makefile  Makefile.am  algebra.sht  attrib.cpp  combine.sht  connect.sht  constants.sht  control.dot  control.ps  copy.sht  do.cpp  do.sht  error.sht  for.cpp  for.sht  if.sht  inout.sht  julia.sht  kill.cpp  longtuple.sht  manip.sht  matrix.cpp  matrix.sht  neg.sht  ops.cpp  ops.sht  point.cpp  point.sht  rch.sht  shvector.cpp  shvector.sht  simple.cpp  simple.sht  stream.cpp  stream_inverse.cpp  test.footer  test.header  texture.cpp  texture.sht  (+4 more)
util/: Makefile.am  Makefile.win32  Perlin.cpp  Perlin.hpp  ShFunc.hpp  ShFuncImpl.hpp  ShKernelLib.cpp  ShKernelLib.hpp  ShKernelLibImpl.hpp  ShKernelLight.hpp  ShKernelLightImpl.hpp  ShKernelPost.hpp  ShKernelPostImpl.hpp  ShKernelSurfMap.cpp  ShKernelSurfMap.hpp  ShKernelSurface.hpp  ShKernelSurfaceImpl.hpp  ShMesh.hpp  ShMeshImpl.hpp  ShNoise.hpp  ShNoiseImpl.hpp  ShObjMesh.cpp  ShObjMesh.hpp  ShPerlin.cpp  ShPerlin.hpp  ShPerlinImpl.hpp  ShPngImage.cpp  ShPngImage.hpp  ShPngImageImpl.hpp  ShUtil.hpp  ShUtilImpl.hpp  ShUtilLib.hpp  ShWorley.cpp  ShWorley.hpp  ShWorleyImpl.hpp  Worley.cpp  Worley.hpp  shutil.cpp  shutil.hpp
(+1102 files in other folders)
