INCLUDES = -I../src $(LTDLINCL) 

#lib_LTLIBRARIES = libshla.la

#libshla_la_LIBADD = $(LIBLTDL)
#libshla_la_LDFLAGS = -export-dynamic -no-undefined

#libshla_la_SOURCES = 

incincdir = $(includedir)/sh

incinc_HEADERS =  ShlaLib.hpp \
                  ShlaMatrix.hpp \
                  ShlaMatrixImpl.hpp \
                  ShlaRenderable.hpp \
                  ShlaRenderableImpl.hpp \
                  ShlaVector.hpp \
                  ShlaVectorImpl.hpp \
                  shla.hpp
